<resources>
    <string name="app_name">Recipeopedia</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>
    <string name="edit">Edit</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="update_profile">Update Profile</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="enter_first_name">Please enter first name</string>
    <string name="enter_last_name">Please enter last name</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_phone_number">Please enter phone number</string>
    <string name="enter_bio">Please enter bio</string>
    <string name="enter_valid_email">Please enter valid email</string>
    <string name="edit_account">Edit Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="search">Search</string>
    <string name="search_for_a_recipe">Search for a recipe</string>
    <string name="image_of_recipe">image of recipe</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="update_profile_information">Update Profile Information</string>
    <string name="description">Description</string>
    <string name="profile_update_success">Account information updated!</string>
    <string name="full_name">Full Name</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="view_comments">View Comments</string>
    <string name="type_your_review">Type your review…</string>
    <string name="post_review">Post Review</string>
    <string name="leave_a_review">Leave a Review</string>
    <string name="comment_section">Comment Section</string>
    <string name="comment">Comment</string>
    <string name="time_stamp">Time Stamp</string>
    <string name="meal_type">Meal Type</string>
    <string name="health_labels">Health Labels</string>
    <string name="enter_username">Please enter username</string>
    <string name="enter_password">Please enter password</string>
    <string name="incorrect_login_info">Incorrect username or password</string>
    <string name="record">Record</string>
    <string name="view_your_attempts_at_this_recipe">View Your Attempts at This Recipe</string>
    <string name="describe_your_attempt">Describe your attempt</string>
    <string name="your_attempts">Your Attempts</string>
    <string name="no_recipes_saved_save_some_recipes_first">No recipes saved! Save some recipes first.</string>
    <string name="enter_account_info">Enter account information</string>
    <string name="issue_creating_account">Issue with creating account!</string>
    <string name="account_successfully_made">Account successfully made!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="upload_a_picture_of_your_attempt">Upload a Picture of Your Attempt</string>
    <string name="picture_uploaded">Picture uploaded!</string>
    <string name="take_a_picture_of_your_attempt">Take a Picture of Your Attempt</string>
    <string name="describe_your_experiences_with_this_recipe">Describe your experiences with this recipe</string>
    <string name="description_cannot_be_empty">Description cannot be empty</string>
    <string name="attempt_posted">Attempt posted!</string>
    <string name="picture_not_taken">Picture wasn\'t taken!</string>
    <string name="logging_out">Logging Out</string>
    <string name="review_empty">Review cannot be empty</string>
    <string name="review_posted">Review posted!</string>
    <string name="no_key_word_searched_search_for_a_recipe">Find cooking inspiration! Search for a recipe.</string>
</resources>