<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="favoriteRecipe"
            type="com.example.recipeopedia.models.FavoriteRecipe" />

        <variable
            name="imageUrl"
            type="String" />
    </data>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activities.FavoriteRecipeDetailsActivity">

            <ImageView
                android:id="@+id/ivRecipeImage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/image_of_recipe"
                app:recipeImage="@{favoriteRecipe.image}"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvRecipeName"
                android:layout_width="407dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivRecipeImage"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="6dp"
                android:layout_marginTop="155dp"
                android:layout_marginEnd="6dp"
                android:text="@{favoriteRecipe.recipeName}"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:text="@string/recipe_name" />

            <TextView
                android:id="@+id/tvInstructionsLayout"
                android:layout_width="407dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvRecipeName"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="6dp"
                android:text="@string/instructions"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/tvInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvInstructionsLayout"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="6dp"
                android:text="@{favoriteRecipe.instructions}"
                tools:text="@string/instructions" />

            <TextView
                android:id="@+id/tvIngredientsLayout"
                android:layout_width="407dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvInstructions"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="6dp"
                android:text="@string/ingredients"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/tvIngredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvIngredientsLayout"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="6dp"
                android:text="@{favoriteRecipe.ingredients}"
                tools:text="@string/ingredients" />

            <TextView
                android:id="@+id/tvHealthLabelsLayout"
                android:layout_width="407dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvIngredients"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="6dp"
                android:text="@string/health_labels"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/tvHealthLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvHealthLabelsLayout"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="6dp"
                android:text="@{favoriteRecipe.healthLabels}"
                tools:text="@string/health_labels" />

            <Button
                android:id="@+id/btnViewAttempts"
                android:layout_width="400dp"
                android:layout_height="45dp"
                android:layout_below="@id/tvHealthLabels"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="0dp"
                android:gravity="center_horizontal"
                android:text="@string/view_your_attempts_at_this_recipe" />

        </RelativeLayout>
    </ScrollView>
</layout>