<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ReviewSectionActivity">

    <TextView
        android:id="@+id/tvReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:gravity="center_horizontal"
        android:text="@string/leave_a_review"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/etReview"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@id/tvReview"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="0dp"
        android:hint="@string/type_your_review" />

    <Button
        android:id="@+id/btnPostReview"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/etReview"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="300dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="-29dp"
        android:text="@string/comment" />

    <TextView
        android:id="@+id/tvReviewSectionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnPostReview"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        android:gravity="center_horizontal"
        android:text="Review Section"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvReviewSectionLayout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvReviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:padding="8dp" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</RelativeLayout>