<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EditProfileFragment">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/profile_picture"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivProfileImage"
        android:layout_weight="1"
        android:ems="10"
        android:hint="Username"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUsername"
        android:layout_weight="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword" />


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_weight="1"
        android:ems="10"
        android:hint="Email"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:layout_weight="1"
        android:ems="10"
        android:hint="Phone Number"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <EditText
        android:id="@+id/tvBio"
        android:layout_width="371dp"
        android:layout_height="154dp"
        android:layout_below="@id/etEmail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/bio" />

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="116dp"
        android:layout_height="47dp"
        android:layout_below="@+id/tvBio"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="147dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="184dp"
        android:contentDescription="Update Profile"
        android:text="@string/update_profile"
        tools:ignore="SpeakableTextPresentCheck" />
</RelativeLayout>