<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ReviewSectionActivity">

    <TextView
        android:id="@+id/tvYourAttemptLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="6dp"
        android:text="Tried making this recipe? Describe your experience!"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <EditText
        android:id="@+id/etYourAttempt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvYourAttemptLayout"
        android:layout_marginStart="6dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="6dp"
        android:hint="@string/describe_your_attempt"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <Button
        android:id="@+id/btnPostAttempt"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/etYourAttempt"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="300dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="0dp"
        android:text="@string/record" />

    <TextView
        android:id="@+id/tvYourAttemptsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnPostAttempt"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="6dp"
        android:text="@string/your_attempts"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/tvNoAttempts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="6dp"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="0dp"
        android:elevation="10dp"
        android:text="No attempts yet! Don't be afraid to give the recipe a try."
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/cardview_dark_background" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvYourAttemptsLayout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAttempts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:padding="8dp" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</RelativeLayout>